; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/mei/extr_hw-me.c_mei_me_pg_in_transition.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/mei/extr_hw-me.c_mei_me_pg_in_transition.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mei_device = type { i64 }

@MEI_PG_EVENT_WAIT = common dso_local global i64 0, align 8
@MEI_PG_EVENT_INTR_WAIT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mei_device*)* @mei_me_pg_in_transition to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mei_me_pg_in_transition(%struct.mei_device* %0) #0 {
  %2 = alloca %struct.mei_device*, align 8
  store %struct.mei_device* %0, %struct.mei_device** %2, align 8
  %3 = load %struct.mei_device*, %struct.mei_device** %2, align 8
  %4 = getelementptr inbounds %struct.mei_device, %struct.mei_device* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @MEI_PG_EVENT_WAIT, align 8
  %7 = icmp sge i64 %5, %6
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load %struct.mei_device*, %struct.mei_device** %2, align 8
  %10 = getelementptr inbounds %struct.mei_device, %struct.mei_device* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @MEI_PG_EVENT_INTR_WAIT, align 8
  %13 = icmp sle i64 %11, %12
  br label %14

14:                                               ; preds = %8, %1
  %15 = phi i1 [ false, %1 ], [ %13, %8 ]
  %16 = zext i1 %15 to i32
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
